Fix login screen spacing ; Capitalise SQL syntaxes in Rules data

--- a/BingVoiceSystem/BingVoiceSystem/Content/bootstrap.css
+++ b/BingVoiceSystem/BingVoiceSystem/Content/bootstrap.css
@@ -860,9 +860,6 @@ pre code {
   min-height: 1px;
   padding-right: 15px;
   padding-left: 15px;
-    top: 20px;
-    left: 0px;
-    height: 221px;
 }
 
 .col-xs-1,
